--- a/src/app/utils/components/list-maker-list/list-maker-list.component.html
+++ b/src/app/utils/components/list-maker-list/list-maker-list.component.html
@@ -11,7 +11,7 @@
 <section class="flex flex-wrap justify-center">
   @if (itemsSelected.length>0) { @for (item of itemsSelected; track $index) {
   <div
-    class="bg-purple-800 flex items-center w-[220px] text-white rounded-lg p-2 m-1"
+    class="bg-orange-600 flex items-center w-[220px] text-white rounded-lg p-2 m-1"
   >
     <span class="font-black text-lg w-[250px]">{{ item.name }}</span>
     <mat-icon (click)="removeItem(item)" class="cursor-pointer">close</mat-icon>
