--- a/src/app/utils/modules/catalogues/catalogue-form/catalogue-form.component.html
+++ b/src/app/utils/modules/catalogues/catalogue-form/catalogue-form.component.html
@@ -3,7 +3,7 @@
 <mat-card>
   <mat-card-header>
     <mat-card-title>
-      <h2>
+      <h2 class="title">
         {{ dataCatalogue.catalogue ? "Editar" : "Crear" }}
         {{ dataCatalogue.title }}
       </h2>
@@ -11,7 +11,7 @@
   </mat-card-header>
   <mat-card-content>
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
-      <mat-form-field class="w-full">
+      <mat-form-field class="w-full mb-3">
         <mat-label>Nombre</mat-label>
         <input
           matInput
@@ -21,7 +21,7 @@
         />
         <mat-error> El campo es requerido </mat-error>
       </mat-form-field>
-      <mat-form-field class="w-full">
+      <mat-form-field class="w-full mb-3">
         <mat-label>Descripción</mat-label>
         <textarea
           matInput
@@ -34,6 +34,20 @@
         ></textarea>
         <mat-error> El campo es requerido </mat-error>
       </mat-form-field>
+      @if (dependency) {
+      <mat-form-field class="w-full mb-3">
+        <mat-label>{{ dependency.name }}</mat-label>
+        <mat-select formControlName="catalogueParentId">
+          @for (item of catalogueDependency; track $index) {
+          <mat-option [value]="item.id">
+            {{ item.name }}
+          </mat-option>
+          }
+        </mat-select>
+        <mat-error> El campo es requerido </mat-error>
+      </mat-form-field>
+      }
+
       <div class="flex justify-end w-full flex-wrap">
         <button
           mat-raised-button
