--- a/src/app/utils/modules/user/pages/forgot-password/forgot-password.component.html
+++ b/src/app/utils/modules/user/pages/forgot-password/forgot-password.component.html
@@ -4,7 +4,7 @@
     [formGroup]="form"
     class="left-0 right-0 mx-auto w-[95%] mt-[10px]"
   >
-    <h1>Recuperar contraseña</h1>
+    <h1 class="title">Recuperar contraseña</h1>
 
     <mat-form-field class="w-full mt-[5px]">
       <input
