--- a/src/app/utils/modules/user/pages/user-create/user-create.component.html
+++ b/src/app/utils/modules/user/pages/user-create/user-create.component.html
@@ -4,7 +4,7 @@
     (ngSubmit)="createUser()"
     class="left-0 right-0 mx-auto w-[95%] mt-[10px]"
   >
-    <h1>Crear usuario</h1>
+    <h1 class="title">Crear usuario</h1>
 
     <mat-form-field class="w-full mb-[5px] mt-4">
       <mat-label>Nombre</mat-label>
