--- a/src/app/utils/components/form-cms/form-cms.component.html
+++ b/src/app/utils/components/form-cms/form-cms.component.html
@@ -1,3 +1,4 @@
+@if(data()){
 <mat-dialog-content>
   <mat-card>
     <mat-card-header>
@@ -44,3 +45,5 @@
     </mat-card-content>
   </mat-card>
 </mat-dialog-content>
+
+}
