--- a/src/app/providersModule/components/provider-product-home/provider-product-home.component.html
+++ b/src/app/providersModule/components/provider-product-home/provider-product-home.component.html
@@ -3,7 +3,7 @@
   <p class="subtitleItem">Nombre:</p>
   {{ element.product.name }}
   <p class="subtitleItem">Marca:</p>
-  {{ element.product.brand.name }}
+  {{ element.product.brandProduct.name }}
   <p class="subtitleItem">Categoría:</p>
   {{ element.product.category.name }}
   <p class="subtitleItem">Precio:</p>
