--- a/src/app/utils/components/autocomplete-google-maps/autocomplete-google-maps.component.html
+++ b/src/app/utils/components/autocomplete-google-maps/autocomplete-google-maps.component.html
@@ -1,4 +1,4 @@
-<mat-form-field>
+<mat-form-field class="w-full">
   <mat-label> Buscar ubicación </mat-label>
   <input matInput #inputField />
 </mat-form-field>
