Termine el modal de respuesta del piloto mas rapido

--- a/src/app/drivers/pages/model-gasoline-form/model-gasoline-form.component.html
+++ b/src/app/drivers/pages/model-gasoline-form/model-gasoline-form.component.html
@@ -19,7 +19,7 @@
       <mat-error>El campo es requerido</mat-error>
     </mat-form-field>
     <mat-form-field class="w-full mb-3">
-      <mat-label>Litros de gasolina que consume por kilómetro</mat-label>
+      <mat-label>Galones de gasolina que consume por kilómetro</mat-label>
       <input matInput formControlName="gasolineLtsKm" appOnlyNumberInput />
       @if (form.get("gasolineLtsKm")!.hasError("required")) {
       <mat-error>El campo es requerido</mat-error>
