Agregue un nuevo modal que mostraba el precio de los productos

--- a/src/app/orders/pages/orders-add/modal/res-orders/res-orders.component.html
+++ b/src/app/orders/pages/orders-add/modal/res-orders/res-orders.component.html
@@ -86,4 +86,5 @@
       }
     </section>
   </section>
+  <button class="w-full" mat-raised-button mat-dialog-close>Cerrar</button>
 </mat-dialog-content>
